# RSP_final_project

./: LICENSE  README.md  readme_gliu.md  readme_gliu.org  sim.html  sim.md  sim.org
NavToPose/: CMakeLists.txt  package.xml
NavToPose/include/NavToPose/: NavToPose.hpp
NavToPose/src/: NavToPose.cpp  NavToPose_client.cpp
action_msgs/action/: Waffle.action
docs/: conf.py  example.md  index.rst
final_project/: CMakeLists.txt  PC.repos  RSP_final_project.repos  burger.repos  package.xml  waffle.repos
final_project/launch/: burger_setup.launch.py  draw_map.launch  nav2.launch.py  robot_description.launch.py  sample.launch.py  simulation.launch.py  simulation_navigation.launch  waffle.launch  waffle_setup.launch.py
final_project/launch/mapping/: draw_map.launch  simulation_draw_map.launch  turtlebot_draw_map.launch
final_project/launch/maze/: maze_action_simulation.launch
final_project/launch/navigation/: bringup_launch.py  localization_launch.py  navigation2.launch.py  simulation_nav2.launch  simulation_nav2.launch.py  slam_launch.py
final_project/launch/navigation_multibot/: bringup_launch.py  navigation2.launch.py  navigation2_real_robot.launch.py  navigation_launch.py  real_world_multibots.launch  simulation_multibots.launch
final_project/launch/slam/: nav2.launch.py  simulation_slam.launch
final_project/map/: gazebo_map.pgm  gazebo_map.yaml  map.pgm  map.yaml  real_world_no_box.pgm  real_world_no_box.yaml  real_world_with_box.pgm  real_world_with_box.yaml  turtlebot_world.pgm  turtlebot_world.yaml
final_project/param/: nav2_params.yaml  waffle.yaml  waffle_nav2.yaml  waffle_real.yaml
final_project/rviz/: draw_map.rviz  navigation.rviz  real_multibots.rviz  simulation.rviz  simulation_multibots.rviz  simulation_nav2.rviz  slam.rivz.rviz  slam.rviz  turtlebot_draw_map.rviz
final_project/src/: teleop.cpp
final_project/urdf/: burger.urdf  burger.urdf.xacro  burger.xacro  camera.xacro  ignition_system_plugin.xacro  lidar.xacro  turtlebot3_plugin.xacro  turtlebot3_plugin_burger.xacro  waffle.urdf  waffle.urdf.xacro  waffle.xacro
final_project/world/: test-nav2_map.sdf  test.sdf  turtlebot_world.sdf
ign_gazebo/: CMakeLists.txt  package.xml
ign_gazebo/launch/: bringup.launch.py  bringup_turtlebots.launch.py  ign_bridge.launch.py  robot_ign.launch.py  robot_state_pub.launch.py  sample_aruco.launch.py
ign_gazebo/meshes/: marker01.dae  marker01.stl  marker02.dae  marker02.stl  marker03.stl  marker04.stl  marker05.stl  marker06.stl  marker07.stl  marker08.stl
ign_gazebo/urdf/: .moving_box.urdf.swp  .moving_box.urdf.xacro.swp  artag.urdf.xacro  bot_world.urdf  bot_world.urdf.xacro  bot_world.xacro  moving_box.urdf  moving_box.urdf.xacro  moving_box.xacro  sample_moving_box.urdf.xacro  sample_moving_box.xacro
ign_gazebo/worlds/: sample_world.sdf  turtlebot_world.sdf
maze_msgs/: .package.xml.swp  CMakeLists.txt  README.md  package.xml
maze_msgs/action/: .Burger.action.swp  BridgeConnect.action  Burger.action  Waffle.action
navtopose/: CMakeLists.txt  package.xml
navtopose/include/NavToPose/: NavToPose.hpp
navtopose/src/: NavToPose.cpp  NavToPose_client.cpp  NavToPose_server.cpp
ros2_aruco/ros2_aruco/: .aruco_generate_marker.py.swp  aruco_generate_marker.py  aruco_node.py
src/action_msgs/: CMakeLists.txt  package.xml
src/action_msgs/action/: BridgeConnect.action  Burger.action
src/final_project/: CMakeLists.txt  package.xml
src/final_project/include/final_project/: teleop.hpp
src/final_project/launch/: waffle.launch
src/final_project/rviz/: simulation.rviz
src/final_project/urdf/: camera.xacro  ignition_system_plugin.xacro  imu.xacro  lidar.xacro  turtlebot3_plugin.xacro  waffle.urdf  waffle.urdf.xacro  waffle.xacro
src/final_project/world/: template.sdf  waffle.sdf
src/turtlebot_actionlib/: CMakeLists.txt
turtlebot_actionlib/: CMakeLists.txt  package.xml
turtlebot_actionlib/include/turtlebot_actionlib/: .waffle_action.hpp.swp  burger_action.hpp  camera_subscriber.hpp  initialpose_publisher.hpp  maze_action.hpp  waffle_action.hpp
turtlebot_actionlib/src/: burger_action.cpp  camera_subscriber.cpp  initialpose_pub.cpp  initialpose_publisher.cpp  maze_action.cpp  maze_client.cpp  maze_client_OnRealRobot.cpp  maze_server.cpp  waffle_action.cpp
